k8s/deployment-nodeapp.yaml
# Nodeapp Deployment 

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: nodeapp
          image: pankaj6262/nodeapp:latest
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]

---

# Nodeapp Service

apiVersion: v1
kind: Service
metadata:
  name: nodeapp
  namespace: app
spec:
  type: ClusterIP
  selector:
    app: nodeapp
  ports:
    - port: 3000
      targetPort: 3000
