k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingres
  namespace: app
  annotations:
    alb.ingress.kubernetes.io/group.name: app-group
    alb.ingress.kubernetes.io/load-balancer-name: app-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodeapp
                port:
                  number: 3000
